--- a/common/pom.xml
+++ b/common/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>com.pwinckles.cassette</groupId>
         <artifactId>cbe-parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>cbe-common</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <name>common</name>
 
