--- a/scraper/pom.xml
+++ b/scraper/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>com.pwinckles.cassette</groupId>
         <artifactId>cbe-parent</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>cbe-scraper</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
 
     <name>scraper</name>
 
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.pwinckles.cassette</groupId>
             <artifactId>cbe-common</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.2-SNAPSHOT</version>
         </dependency>
 
         <!-- Scraping -->
