--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -25,8 +25,8 @@
 
         <!-- json -->
         <dependency>
-            <groupId>io.avaje</groupId>
-            <artifactId>avaje-jsonb</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
     </dependencies>
 
