--- a/scraper/pom.xml
+++ b/scraper/pom.xml
@@ -31,13 +31,8 @@
 
         <!-- json -->
         <dependency>
-            <groupId>io.avaje</groupId>
-            <artifactId>avaje-jsonb</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.avaje</groupId>
-            <artifactId>avaje-jsonb-generator</artifactId>
-            <scope>provided</scope>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
 
         <!-- Lang ergonomics -->
